2008-04-25  Hans Breuer  <hans@breuer.org>

	* objects/custom/shape_info.c : don't mess with info->icon after
	preload (valgrind complained about invalid reads of free'd strings
	and sometimes there was a missing icon in the toolbox. Also fixed
	some type cast warnings

	* lib/diagdkrenderer.c lib/diasvgrenderer.c lib/dialibartrenderer.c 
	  app/diapsrenderer.c app/diapsft2renderer.c : all 
	DiaRenderer::draw_string() methods	were leaking their text_line
	* lib/textline.c(text_line_destroy) : use clear_layout_offset()
	instead of leaking cached values
	* lib/autoroute.c : othconn_set_points does not eat points
	* app/diagram.c : return of diagram_get_name() must be free'd
	* objects/standard/line.c : connpointline_create must be paired with
	connpointline_destroy()
	* objects/standard/outline.c : object_init() needs object_destroy()
	* objects/UML/state.c : don't miss to free action strings
	* objects/UML/transition.c : also leaking strings

	* plug-ins/vdx/vdx-import.c : minimal handling of vdx:PolylineTo
	to avoid an endless loop, fixes bug #529882

	* lib/propdialogs.c(property_signal_handler) : get rid of 
	signed/unsigned warning
	(prop_dialog_add_properties) : better guess on the required size 
	of the scrollable area. Never make it bigger than the full content.
	
	* lib/properties.h : remove defintions for PROP_STD_MULTICOL_*, these
	format helpers need to be unique in case of being combined in the
	group properties dialog across such objects
	* objects/chronogram/chronoref.c objects/Database/reference.c
	  objects/Database/table.c objects/UML/class.c : updated accordingly

	* objects/misc/misc.c : remove registration of newgroup here
	* app/app_procs.c : use USE_NEWGROUP to conditionally register 
	newgroup_type (default disabled, because it is unfinished) ...
	* lib/newgroup.h : ... make newgroup_type a DIAVAR to be useable 
	in principle on win32. Together fixes bug #505513 
	* lib/newgroup.c : #warning is a gcc extension, conditionalize