@@ -1,5 +1,8 @@
 2008-04-25  Hans Breuer  <hans@breuer.org>
 
+	* lib/diagdkrenderer.c dia_image.[ch] : don't use dia_image_draw()
+	for up-scaling of images to reduce memory consumption (bug #439885)
+
 	* objects/custom/shape_info.c : don't mess with info->icon after
 	preload (valgrind complained about invalid reads of free'd strings
 	and sometimes there was a missing icon in the toolbox. Also fixed
